--- a/Summ/_quarto.yml
+++ b/Summ/_quarto.yml
@@ -1,5 +1,6 @@
 project:
   type: website
+  output-dir: docs
 
 website:
   title: "Impact of Earthquakes on Supply Chain Resilience in Semiconductor Industry, Taiwan"
